--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,29 +1,16 @@
 @forward '@/styles/variables.module';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  // --background: #ffffff;
+  // --foreground: #171717;
+  --max-width: $max-width;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
+  /* :root {
     --background: #0a0a0a;
     --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  } */
 }
 
 * {
@@ -32,9 +19,31 @@ body {
   margin: 0;
 }
 
+html,
+body {
+  max-width: var(--max-width);
+  overflow-x: hidden;
+  user-select: none;
+}
+
+body {
+  background: $anti-flash-white;
+  font-family: Arial, Helvetica, sans-serif;
+  color: $black;
+  // color: var(--foreground);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 a {
   color: inherit;
   text-decoration: none;
+}
+
+// Z-INDEXES
+
+.header_zIndex {
+  z-index: 10;
 }
 
 @media (prefers-color-scheme: dark) {
