--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -12,3 +12,12 @@ $grey-darker: #292929;
 $black: #000;
 
 $anti-flash-white: #f0f1fa;
+
+$gap_XXXS: 2px;
+$gap_XXS: 5px;
+$gap_XS: 10px;
+$gap_S: 20px;
+$gap_M: 30px;
+$gap_L: 50px;
+$gap_XL: 100px;
+$gap_XXL: 200px;
