--- a/src/components/layout/header/index.scss
+++ b/src/components/layout/header/index.scss
@@ -1,5 +1,6 @@
 header {
   position: fixed;
+  width: fit-content;
   top: 0;
   display: flex;
   flex-direction: row;
@@ -8,7 +9,16 @@ header {
 }
 
 #header_logo {
-  width: fit-content;
   left: 0;
   padding: $base-padding-y 0 0 $base-padding-x;
+}
+
+#header_buttons {
+  right: 0;
+  padding: $base-padding-y $base-padding-x 0 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: $gap_XS;
+  font-size: 0.875em;
 }
