--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -13,6 +13,13 @@ $black: #000;
 
 $anti-flash-white: #f0f1fa;
 
+$void-black: #262626;
+$lime-green: #b2f141;
+$bright-lavender: #b087fc;
+$light-grey: #d7d8dc;
+$raisin-black: #202020;
+$lavender-mist: #eae1ff;
+
 $gap_XXXS: 2px;
 $gap_XXS: 5px;
 $gap_XS: 10px;
