--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -28,7 +28,7 @@ body {
 
 body {
   background: $anti-flash-white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica;
   color: $black;
   // color: var(--foreground);
   -webkit-font-smoothing: antialiased;
@@ -38,6 +38,16 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
 }
 
 // Z-INDEXES
