--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -28,3 +28,9 @@ $gap_M: 30px;
 $gap_L: 50px;
 $gap_XL: 100px;
 $gap_XXL: 200px;
+
+:root {
+  --light-grey: #d7d8dc;
+  --white: #ffffff;
+  --bright-lavender: #b087fc;
+}
