--- a/src/components/layout/buttons/menu_button/index.scss
+++ b/src/components/layout/buttons/menu_button/index.scss
@@ -4,8 +4,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 0.625em;
-  font-size: 1em;
+  gap: 1.225em;
+  font-weight: 500;
   border-radius: 6.25em;
   border-width: initial;
   overflow: hidden;
