--- a/src/components/layout/header/header_buttons_content/menu/routes/route/index.scss
+++ b/src/components/layout/header/header_buttons_content/menu/routes/route/index.scss
@@ -18,6 +18,7 @@
       transform: translateY(0.5rem);
 
       .route-character {
+        font-weight: 500;
         display: inline-block;
       }
     }
