--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,9 +1,9 @@
 @forward '@/styles/variables.module';
 
-:root {
+/* :root {
   // --background: #ffffff;
   // --foreground: #171717;
-}
+} */
 
 @media (prefers-color-scheme: dark) {
   /* :root {
@@ -56,8 +56,12 @@ button {
   z-index: 10;
 }
 
-.header-buttons-content-zIndex {
+.menu-button-content-zIndex {
   z-index: 9;
+}
+
+.locale-switcher-button-content-zIndex {
+  z-index: 8;
 }
 
 @media (prefers-color-scheme: dark) {
