--- a/src/components/layout/header/menu_buttons_content/index.scss
+++ b/src/components/layout/header/menu_buttons_content/index.scss
@@ -6,3 +6,9 @@
   height: 100vh;
   transform: translateX(100%);
 }
+
+@media (max-width: $breakpoint_S) {
+  #menu-button-content {
+    background-color: blue;
+  }
+}
