--- a/src/components/svg/menu_button_dots/index.scss
+++ b/src/components/svg/menu_button_dots/index.scss
@@ -9,3 +9,10 @@
     height: 100%;
   }
 }
+
+@media (max-width: $breakpoint_S) {
+  #menu-button-dots {
+    width: 0.4em;
+    height: 0.8em;
+  }
+}
