--- a/src/components/layout/header/menu_buttons_content/menu/index.scss
+++ b/src/components/layout/header/menu_buttons_content/menu/index.scss
@@ -2,6 +2,7 @@
   position: fixed;
   width: fit-content;
   margin-top: $gap_XS;
+  padding: 0 !important;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -19,10 +20,9 @@
 
 @media (max-width: $breakpoint_S) {
   #menu {
-    position: absolute;
     width: 100%;
     margin-top: 15vh;
-    padding: $base-padding-y $base-padding-x;
+    padding: $base-padding-y $base-padding-x !important;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
