--- a/src/components/layout/buttons/menu_button/index.scss
+++ b/src/components/layout/buttons/menu_button/index.scss
@@ -33,3 +33,18 @@
     }
   }
 }
+
+@media (max-width: $breakpoint_S) {
+  #menu-button {
+    width: 3.5em;
+    height: 3.5em;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    border-width: initial;
+    overflow: hidden;
+    cursor: pointer;
+  }
+}
