--- a/src/components/layout/header/index.scss
+++ b/src/components/layout/header/index.scss
@@ -10,7 +10,7 @@ header {
 
 #header-logo {
   left: 0;
-  padding: $base-padding-y 0 0 $base-padding-x;
+  padding: $base-padding-y 0 0 calc($base-padding-x - 2.5vw);
 }
 
 #header-buttons {
@@ -26,3 +26,4 @@ header {
 #header-button-S {
   display: none;
 }
+
