--- a/src/components/layout/header/index.scss
+++ b/src/components/layout/header/index.scss
@@ -1,29 +1,34 @@
-header {
+#header-container {
   position: fixed;
-  width: fit-content;
-  top: 0;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: space-between;
-}
+  width: 100%;
+  max-width: $max-width;
 
-#header-logo {
-  left: 0;
-  padding: $base-padding-y 0 0 calc($base-padding-x - 2.5vw);
-}
+  header {
+    position: absolute;
+    width: fit-content;
+    top: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
 
-#header-buttons {
-  right: 0;
-  padding: $base-padding-y $base-padding-x 0 0;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: $gap_XS;
-  font-size: 0.875em;
-}
+  #header-logo {
+    left: 0;
+    padding: calc($base-padding-y - 0.5vh) 0 0 calc($base-padding-x - 1.5vw);
+  }
 
-#header-button-S {
-  display: none;
-}
+  #header-buttons {
+    right: 0;
+    padding: $base-padding-y $base-padding-x 0 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: $gap_XS;
+    font-size: 0.875em;
+  }
 
+  #header-button-S {
+    display: none;
+  }
+}
