Menu: isSmallScreen socials icons animation

--- a/src/components/layout/header/menu_button_content/index.scss
+++ b/src/components/layout/header/menu_button_content/index.scss
@@ -10,6 +10,6 @@
 @media (max-width: $breakpoint_S) {
   #menu-button-content {
     // opacity: 0;
-    background-color: blue;
+    background-color: #0000ff88;
   }
 }
