--- a/src/components/layout/header/menu_button_content/menu/routes/route/index.scss
+++ b/src/components/layout/header/menu_button_content/menu/routes/route/index.scss
@@ -67,7 +67,7 @@
           display: block;
           font-size: 4.5em;
           line-height: 2;
-          transform-origin: top left;
+          transform-origin: bottom left;
           will-change: transform, background-color;
         }
       }
