--- a/src/components/layout/slices/home/hero/hero_heading/index.scss
+++ b/src/components/layout/slices/home/hero/hero_heading/index.scss
@@ -5,8 +5,8 @@
   height: fit-content;
   display: flex;
   flex-direction: column;
-  line-height: 1.1;
-  font-size: 2vw;
+  line-height: 1.2;
+  font-size: 1.5em;
   margin: 0;
 
   .hero-heading-line-wrapper {
@@ -14,10 +14,25 @@
     clip-path: polygon(0% 0%, 100% 0%, 100% 150%, 0% 150%);
 
     .hero-heading-line {
+      width: auto;
+      height: auto;
       opacity: 0;
       transform-origin: top left;
       transform: translateY(100%) rotateZ(5deg);
       will-change: transform, opacity;
     }
+  }
+}
+
+@media (max-width: $breakpoint_M) {
+  #hero-heading {
+    grid-column: 1 / span 12;
+    grid-row: 3 / span 5;
+  }
+}
+
+@media (max-width: $breakpoint_S) {
+  #hero-heading {
+    font-size: 1.15em;
   }
 }
