--- a/src/components/layout/slices/home/hero/index.scss
+++ b/src/components/layout/slices/home/hero/index.scss
@@ -1,4 +1,4 @@
-#hero_section {
+#hero-section {
   position: relative;
   width: 100%;
   height: 100vh;
@@ -9,10 +9,28 @@
   grid-gap: 20px;
   align-content: flex-start;
 
-  #hero_canvas {
+  #hero-canvas {
     grid-column: 1 / span 12;
     grid-row: 3 / span 9;
     border-radius: 20px;
-    background: $void_black;
+    background: $raisin-black;
+  }
+}
+
+@media (max-width: $breakpoint_M) {
+  #hero-section {
+    #hero-canvas {
+      grid-column: 1 / span 12;
+      grid-row: 5 / span 6;
+    }
+  }
+}
+
+@media (max-width: $breakpoint_S) {
+  #hero-section {
+    #hero-canvas {
+      grid-column: 1 / span 12;
+      grid-row: 5 / 9;
+    }
   }
 }
