variables.scss: monochromatic color palette improved

--- a/src/components/layout/slices/home/hero/ScrollToExplore/index.scss
+++ b/src/components/layout/slices/home/hero/ScrollToExplore/index.scss
@@ -22,7 +22,7 @@
   .thunder-icon {
     width: 20px;
     height: 20px;
-    color: $void-black;
+    color: $bright-lavender-dark;
   }
 
   .arrow-down-icon {
