--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -17,10 +17,17 @@ $grey-darker: #292929;
 $black: #000;
 
 $anti-flash-white: #f0f1fa;
+$blue-00f: #0000ff;
 
 $void-black: #262626;
+$lime-green-lighter: #ffffb1;
+$lime-green-light: #deff6d;
 $lime-green: #b2f141;
+$light-lavender-lighter: #fff7ff;
+$light-lavender-light: #dcb3ff;
 $bright-lavender: #b087fc;
+$bright-lavender-dark: #542ba0;
+$bright-lavender-darker: #10005c;
 $light-grey: #d7d8dc;
 $raisin-black: #202020;
 $lavender-mist: #eae1ff;
