--- a/src/components/layout/slices/home/introduction/paris_metro_map/index.scss
+++ b/src/components/layout/slices/home/introduction/paris_metro_map/index.scss
@@ -1,23 +1,23 @@
-#paris_metro_map {
+#paris-metro-map {
   z-index: 0;
   position: absolute;
-  width: 100vw;
-  // margin-top: 10vw;
-  // margin-left: -10vw;
-  // height: 150vh;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   opacity: 0.5;
 }
 
-@media (max-width: $breakpoint_M) {
+/* @media (max-width: $breakpoint_M) {
   #paris_metro_map {
     transform-origin: center;
     transform: scale(1.15);
   }
 }
 
-@media (max-width: $breakpoint_M) {
+@media (max-width: $breakpoint_S) {
   #paris_metro_map {
     transform-origin: center;
     transform: scale(1.25);
   }
-}
+} */
