--- a/src/components/layout/slices/home/introduction/index.scss
+++ b/src/components/layout/slices/home/introduction/index.scss
@@ -1,5 +1,5 @@
-#introduction-slice {
+#introduction-section {
   position: relative;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 182vh;
 }
