--- a/src/app/[locale]/page.scss
+++ b/src/app/[locale]/page.scss
@@ -1,4 +1,6 @@
 #home-page {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  max-width: $max-width;
+  height: fit-content;
+  margin: 0 auto;
 }
