--- a/src/components/layout/slices/home/introduction/paris_metro_map/index.scss
+++ b/src/components/layout/slices/home/introduction/paris_metro_map/index.scss
@@ -1,9 +1,8 @@
 #paris-metro-map {
   z-index: 0;
   position: absolute;
-  top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   opacity: 0.5;
 }
