Reel: first good step... svg rectangle fitting initial and target divs BUT no scroll offset tracking

--- a/src/components/layout/slices/home/introduction/content/index.scss
+++ b/src/components/layout/slices/home/introduction/content/index.scss
@@ -1,5 +1,6 @@
 #introduction-content {
-  z-index: 3;
+  /* z-index: 3;
   position: absolute;
-  width: 100vw;
+  width: 100vw; */
+  background-color: blue;
 }
