--- a/src/components/layout/slices/home/introduction/content/title/index.scss
+++ b/src/components/layout/slices/home/introduction/content/title/index.scss
@@ -1,14 +1,21 @@
 #introduction-title {
-  margin: $gap_XL;
+  // position: relative;
+  grid-column: 1 / -1;
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+  /* margin: $gap_XL;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: center; */
+  // background-color: orange;
 
   .introduction-title-lines {
     width: 100%;
     display: flex;
     flex-direction: row;
+    // align-items: center;
+    // justify-content: center;
 
     .introduction-title-text-blocks {
       opacity: 1;
