--- a/src/components/layout/slices/home/introduction/content/paragraph/index.scss
+++ b/src/components/layout/slices/home/introduction/content/paragraph/index.scss
@@ -1,11 +1,13 @@
 #home-introduction-container {
-  width: 100%;
+  /* width: 100%;
   margin-left: 45vw;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: start; */
   font-size: 1em;
   line-height: 1.5em;
+  grid-column: 6 / -1;
+  grid-row: 3 / 4;
 
   .introduction-line-wrapper {
     display: block;
