--- a/src/components/layout/slices/home/introduction/index.scss
+++ b/src/components/layout/slices/home/introduction/index.scss
@@ -1,5 +1,11 @@
 #introduction-section {
   position: relative;
-  width: 100%;
-  height: 182vh;
+  width: 100vw;
+  display: grid;
+  // grid-template-rows: repeat(12, minmax(0px, 1fr));
+  grid-template-columns: repeat(12, 1fr);
+  // grid-template-rows: repeat(12, minmax(0px, 1fr));
+  grid-template-rows: repeat(12, 200px);
+  grid-gap: 20px;
+  padding: $base-padding-y $base-padding-x;
 }
