--- a/src/components/layout/slices/home/introduction/reel/index.scss
+++ b/src/components/layout/slices/home/introduction/reel/index.scss
@@ -1,50 +1,49 @@
-.section {
+#reel-section {
   position: relative;
-  height: 200vh;
   width: 100%;
+  height: 200vh;
   padding: 2rem;
   box-sizing: border-box;
-  background-color: #f8f8f8;
+  background-color: orange;
 }
 
-.benchmark {
-  margin: 20vh auto;
-  border: 2px dashed #64748b;
-  position: relative;
-  display: flex;
-  // align-items: center;
-  // justify-content: center;
-  font-weight: bold;
-  color: #333;
-}
-
-#initial {
-  position: absolute;
-  width: 300px;
-  height: 400px;
-  left: 20vh;
-  top: 20vh;
-  background-color: #00f8;
-}
-
-#final {
-  background-color: #0f08;
-  position: absolute;
-  width: 600px;
-  height: 400px;
-  right: 20vh;
-  bottom: 20vh;
-}
-
-.transferSvg {
-  position: fixed !important;
-  pointer-events: none;
+#reel-svg {
   z-index: 10;
-  will-change: transform;
+  // position: fixed !important;
+  position: absolute !important;
   opacity: 1 !important;
+  will-change: transform;
+  pointer-events: none;
 
   rect {
     width: 100%;
     height: 100%;
   }
+}
+
+.reel-container {
+  position: relative;
+  margin: 20vh auto;
+  display: flex;
+  border: 2px dashed #64748b;
+  font-weight: bold;
+  color: #333;
+}
+
+#initial-container {
+  position: absolute;
+  width: 300px;
+  height: 400px;
+  top: 20vh;
+  left: 20vh;
+  background-color: #00f8;
+}
+
+#target-container {
+  position: absolute;
+  width: 600px;
+  height: 400px;
+  right: 20vh;
+  bottom: 20vh;
+  background-color: #0f08;
 }
