--- a/src/components/layout/slices/home/introduction/reel/index.scss
+++ b/src/components/layout/slices/home/introduction/reel/index.scss
@@ -1,17 +1,8 @@
-#reel-section {
-  position: relative;
-  width: 100%;
-  height: 200vh;
-  padding: 2rem;
-  box-sizing: border-box;
-  background-color: orange;
-}
-
 #reel-svg {
   z-index: 10;
-  // position: fixed !important;
   position: absolute !important;
-  opacity: 1 !important;
+  bottom: 0;
+  opacity: 0.5 !important;
   will-change: transform;
   pointer-events: none;
 
@@ -21,29 +12,18 @@
   }
 }
 
-.reel-container {
-  position: relative;
-  margin: 20vh auto;
-  display: flex;
-  border: 2px dashed #64748b;
-  font-weight: bold;
-  color: #333;
-}
-
 #initial-container {
-  position: absolute;
-  width: 300px;
-  height: 400px;
-  top: 20vh;
-  left: 20vh;
+  grid-row: 3 / 4;
+  grid-column: 1 / 5;
+  width: 100%;
+  aspect-ratio: 16 / 9;
   background-color: #00f8;
 }
 
 #target-container {
-  position: absolute;
-  width: 600px;
-  height: 400px;
-  right: 20vh;
-  bottom: 20vh;
+  grid-row: 4 / -1;
+  grid-column: 1 / -1;
+  width: 100%;
+  aspect-ratio: 16 / 9;
   background-color: #0f08;
 }
