--- a/src/components/layout/slices/home/introduction/reel/index.scss
+++ b/src/components/layout/slices/home/introduction/reel/index.scss
@@ -1,14 +1,29 @@
 #reel-svg {
   z-index: 10;
   position: absolute !important;
-  bottom: 0;
-  opacity: 0.5 !important;
+  opacity: 1 !important;
   will-change: transform;
   pointer-events: none;
-
-  rect {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  
+  foreignObject {
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    video {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
+      object-position: center;
+      background-color: black;
+    }
   }
 }
 
@@ -17,7 +32,6 @@
   grid-column: 1 / 5;
   width: 100%;
   aspect-ratio: 16 / 9;
-  background-color: #00f8;
 }
 
 #target-container {
@@ -25,5 +39,4 @@
   grid-column: 1 / -1;
   width: 100%;
   aspect-ratio: 16 / 9;
-  background-color: #0f08;
 }
