--- a/src/components/layout/slices/home/introduction/reel/index.scss
+++ b/src/components/layout/slices/home/introduction/reel/index.scss
@@ -2,6 +2,8 @@
   z-index: 10;
   position: absolute !important;
   opacity: 1 !important;
+  perspective: 1000px;
+  // transform: skewY(-5deg);
   will-change: transform;
   pointer-events: none;
   display: flex;
@@ -20,7 +22,8 @@
     video {
       max-width: 100%;
       max-height: 100%;
-      object-fit: contain;
+      // object-fit: contain;
+      object-fit: fill;
       object-position: center;
       background-color: black;
       border-radius: 0.5px;
@@ -28,12 +31,27 @@
   }
 }
 
+#reel-canvas {
+  z-index: 10;
+  position: absolute !important;
+  opacity: 1 !important;
+  perspective: 1000px;
+  // transform: skewY(-5deg);
+  will-change: transform;
+  pointer-events: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
 #initial-container {
   grid-row: 3 / 4;
   grid-column: 1 / 5;
   width: 100%;
   aspect-ratio: 16 / 9;
-  margin-top: -100px
+  margin-top: -100px;
 }
 
 #target-container {
