--- a/src/components/layout/slices/home/last_projects/title_bar/title/index.scss
+++ b/src/components/layout/slices/home/last_projects/title_bar/title/index.scss
@@ -1,4 +1,4 @@
-#last-projects-title-bar {
+#last-projects-title {
   position: absolute;
   width: fit-content;
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
