--- a/src/components/layout/slices/home/introduction/index.scss
+++ b/src/components/layout/slices/home/introduction/index.scss
@@ -2,10 +2,8 @@
   position: relative;
   width: 100vw;
   display: grid;
-  // grid-template-rows: repeat(12, minmax(0px, 1fr));
   grid-template-columns: repeat(12, minmax(0px, 1fr));
-  // grid-template-rows: repeat(12, minmax(0px, 1fr));
   grid-template-rows: repeat(5, minmax(0px, 1fr));
-  grid-gap: 20px;
+  grid-gap: $gap_S;
   padding: $base-padding-y $base-padding-x;
 }
