--- a/src/components/layout/slices/home/last_projects/last_projects_cards/index.scss
+++ b/src/components/layout/slices/home/last_projects/last_projects_cards/index.scss
@@ -1,8 +1,8 @@
-#last-projects-cards {
+#project-cards-cards {
   position: relative;
   margin-top: calc(10.35px * 20);
   grid-column: 1 / span 12;
   display: grid;
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+  grid-template-columns: repeat(12, minmax(0, 1fr));
   grid-gap: $gap_S;
 }
